Added changes to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -35,62 +35,71 @@
     </div>
     <div class="hero-text">
       <div id="header">
-        <h1 id="header1"> The Bright <br> Future of <br> Web 3.0?</h1>
+        <h1> The Bright <br> Future of <br> Web 3.0?</h1>
       </div>
       <div class="paragraph">
         <p> We dive into the next evolution of the web that
           <br> claims to put the power of the platforms back 
-          <br>into the hands of the people. But is it really fulfilling its promise?</p>
+          <br>into the hands of the people. But is it really 
+          <br> fulfilling its promise?</p>
           <button class="read-more">READ MORE</button>
       </div>
     </div>
   </section>
   <section class="aside">
-    <h1>New</h1>
+    <div class="header">
+      <h1>New</h1>
+    </div>
+    
+    <div class="text">
+      <h2>Hydrogen VS Electric Cars</h2>
+      <p>Will hydrogen-fueled cars ever catch up to <br> EVs?</p> <hr id="line1">
 
-    <h2>Hydrogen VS Electric Cars</h2>
-    <p id="hydrogen-fueled">Will hydrogen-fueled cars ever catch up to <br> EVs?</p>
+      <h2>The Downsides of AI Artistry</h2>
+      <p>What are the possible adverse effects of <br> on-demand AI image generation?</p> <hr id="line2">
 
-    <h2>The Downsides of AI Artistry</h2>
-    <p>What are the possible adverse effects of <br> on-demand AI image generation?</p>
-
-    <h2>Is VC Funding Drying Up?</h2>
-    <p>Private funding by VC firms is down 50% <br> YOY. We take a look at what that means.</p>
+      <h2>Is VC Funding Drying Up?</h2>
+      <p>Private funding by VC firms is down 50% <br> YOY. We take a look at what that means.</p>
+    </div>
   </section>
 </main>
 
+<footer>
+    <div class="item1">
+      <div id="image1">
+        <img src="./assets/images/image-retro-pcs.jpg" alt="image-retro-pcs">
+      </div>
+      <div class="text">
+        <h1>01</h1> 
+        <h2>Reviving Retro PCs</h2> 
+        <p>What happens when old PCs <br> are given modern upgrades?</p>
+      </div>
+    </div>
+    <div class="item2">
+      <div id="image2">
+        <img src="./assets/images/image-top-laptops.jpg" alt="image-top-laptops">
+      </div>
+      <div class="text">
+        <h1>02</h1> 
+        <h2>Top 10 Laptops of 2022</h2> 
+        <p> Our best picks for various <br> needs and budgets.</p>
+      </div>
+    </div>
+    <div class="item3">
+      <div id="image3">
+        <img src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth">
+      </div>
+      <div class="text">
+        <h1>03</h1>  
+        <h2>The Growth of Gaming</h2>
+        <p>How the pandemic has sparked <br> fresh opportunities.</p>
+      </div>
+    </div>
+  </footer>
  
-
- 
-
-  
-
-  
-
-  
-  
-
-  
-  
-
-  
-  
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ryan Mugo Githaiga</a>.
   </div>
 </body>
 </html>
